Improved spacing issues between the prototype and site

--- a/css/styles.css
+++ b/css/styles.css
@@ -286,7 +286,7 @@ form > div .input-error-border {
   margin-top: 0;
 }
 
-.footer-content > div {
+.footer-content, .footer-content > div {
   padding-top: 16px;
 }
 
@@ -437,9 +437,13 @@ footer ul li {
     margin-top: 0;
   }
 
+  .latest-blog-posts {
+    padding: 62px 0;
+  }
+
   .latest-blog-posts h2 {
     text-align: center;
-    margin-bottom: 56px;
+    margin: 0 0 62px 0;
   }
 
   .latest-blog-posts .container {
